--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <input type="text" class="direccion" placeholder="Direccion">
             <button class="btn-agregar">Agregar</button>
         </section>
-        <section class="listado">        
+        <section class="listado">    
+            <!-- codigo javascript -->    
         </section>
     </div>
     <script src="js/functions.js"></script>
