--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/e3ae087a9a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Contactos</title>
 </head>
 <body>
