agregado un contador de contactos

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             <input type="text" class="direccion" placeholder="Direccion">
             <button class="btn-agregar">Agregar</button>
         </section>
-        <section class="listado">    
-            <!-- codigo javascript -->    
+        <section class="contacto-container">
+            <h3 class="titulo">Mis contactos (0)</h3>
+            <section class="listado">    
+                <!-- codigo javascript -->    
+            </section>
         </section>
     </div>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/functions.js"></script>
     <script src="js/main.js"></script>
 </body>
